test/files/neg/macro-untyped-vanilla-defs.scala
object Test extends App {
  def foo1(x: _) = ???
  def foo2(x: _*) = ???
  def foo3: _ = ???
  def foo4: _* = ???
}